# cv-generator-tauri

./: .eslintrc.cjs  .gitignore  .release-it.json  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  release.yml  version.yml
.storybook/: main.ts  preview.tsx
public/locales/en/: translation.json
public/locales/fr/: translation.json
public/locales/ja/: translation.json
src/: main.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/resources/: CV_Nom_Prenom_Capability.pptx  data_en.json  data_fr.json  schema.json
src-tauri/src/: commands.rs  errors.rs  logs.rs  main.rs  menu.rs  model.rs
src-tauri/src/variants/: errors.rs  file.rs  mod.rs  model.rs
src-tauri/ts-const-enums/: Cargo.toml
src-tauri/ts-const-enums/src/: lib.rs
src/app/: App.tsx  AppLayout.tsx  AppProvider.tsx  AppRouter.tsx  app-provider.tsx  app-router.tsx  index.tsx
src/app/Views/: EmploymentHistory.tsx  Formation.tsx  Languages.tsx  MyAccount.tsx  Profile.tsx  Projects.tsx  Sectors.tsx  Skills.tsx  Test2View.tsx  TestPage.tsx  TestView.tsx  WelcomeView.tsx
src/app/layouts/: app-layout.tsx  page-layout.tsx
src/app/router/: useNavigateToModal.tsx  useRedirectToWelcomePage.tsx
src/app/routes/: summary-page.tsx  welcome-page.tsx
src/common/settings/: settings-item.tsx  settings-section.tsx
src/components/: AccordionCard.tsx  AccordionTitle.tsx  BetaBadge.tsx  CardProfileButton.tsx  EmploymentHistoryForm.tsx  EmptyState.tsx  FormationForm.tsx  IconButtonAdd.tsx  MarkdownWrapper.tsx  MissingFontModal.tsx  ProfileForm.tsx  ProjectForm.tsx  ProjectsForm.tsx  ScrollToTop.tsx  SkillsForm.tsx  Test.tsx  Test2.tsx  UserForm.tsx  accordion-card-title.tsx  accordion-card.tsx  empty-state.tsx  footer-item-last-updated.tsx  footer-item-output-path.tsx  missing-font-modal.tsx  navigation-list.tsx
src/components/form/: EmploymentHistoryForm.tsx  FormationForm.tsx  ProfileForm.tsx  ProjectsForm.tsx  SkillsForm.tsx
src/configs/: i18n.config.ts
src/constants/: cv-languages.ts  empty-initial-resume.ts  emptyInitialContentResume.ts
src/containers/: CvConfigurationContainer.tsx  EmploymentHistoryContainer.tsx  FormationContainer.tsx  ProfileContainer.tsx  ProjectsContainer.tsx  SidebarContainer.tsx  SkillsContainer.tsx  footer-bar-container.tsx  section-container.tsx  section-item.tsx  sidebar-container.tsx
src/core/events/: emit-application-events.ts  useMenuEvents.tsx
src/core/logs/: useNavigationLogger.tsx
src/hooks/: useAppTheme.tsx  useCVForm.tsx  useDeleteImageProfileStorage.tsx  useEasterEggTheme.tsx  useFormCV.tsx  useFormWarnings.tsx  useGetDataStorage.tsx  useImportDataContent.tsx  useMenuEvents.tsx  useNavigateToModal.tsx  useNavigationLogger.tsx  useRedirectToWelcomePage.tsx  useResetDataStorage.tsx  useSection.tsx  useSetDataStorage.tsx  useSetImageProfileStorage.tsx  useTauriEvents.tsx  userServerPort.tsx
src/layouts/: AppLayout.tsx  PageLayout.tsx  app-layout.tsx  page-layout.tsx  section-droppable-layout.tsx  section-item-layout.tsx  settings-layout.tsx
src/pages/: TestPage.tsx
src/services/: StorageService.tsx
src/stores/: useExpandedItemStore.tsx  useFormStore.tsx  useSidebarStore.tsx  useWarningsStore.tsx
src/styles/: _font-benton-sans.css  _font-quarto.css  _font-ubuntu.css  _toastify.css  index.css
src/tests/: setup.ts
src/themes/: capgemini-theme.ts  default-theme-components.ts  default-theme.ts  luffy-theme.ts
src/types/: sidebar.d.ts  storage.d.ts
src/utils/: drag-and-drop.utils.ts  object.utils.ts
src/validations/: dataContentValidationSchema.ts
(+283 files in other folders)
