[package]
name = "cv_generator"
version = "0.1.1-beta.25"
description = ""
authors = [ "Antoine Barbier <antoine.c.barbier@frog.co>" ]
license = ""
repository = ""
default-run = "cv_generator"
edition = "2021"
rust-version = "1.60"

[build-dependencies.tauri-build]
version = "1.5.2"
features = [ ]

[dependencies]
anyhow = "1.0"
libc = "0.2.158"
serde_json = "1.0"
signal-hook = "0.3.17"
window-vibrancy = "0.4"
convert_case = "0.6.0"
lazy_static = "1.5.0"

  [dependencies.ts-rs]
  version = "9.0.1"

  [dependencies.ts-const-enums]
  path = "ts-const-enums"

  [dependencies.tauri-plugin-fs-extra]
  git = "https://github.com/tauri-apps/plugins-workspace"
  branch = "v1"

  [dependencies.strum]
  version = "0.26.3"
  features = [ "derive" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri]
  version = "1.6.5"
  features = [
  "fs-rename-file",
  "fs-remove-file",
  "updater",
  "shell-sidecar",
  "shell-open",
  "protocol-asset",
  "window-maximize",
  "window-close",
  "window-start-dragging",
  "window-minimize",
  "window-hide",
  "window-unmaximize",
  "window-unminimize",
  "window-show",
  "macos-private-api",
  "dialog-all",
  "http-all",
  "fs-read-dir",
  "fs-exists",
  "fs-read-file",
  "fs-create-dir",
  "fs-write-file",
  "path-all",
  "process-command-api"
]

[features]
custom-protocol = [ "tauri/custom-protocol" ]
