[package]
name = "cv_generator"
version = "0.1.1-beta.30"
description = ""
authors = [ "Antoine Barbier <antoine.c.barbier@frog.co>" ]
license = ""
repository = ""
default-run = "cv_generator"
edition = "2021"
rust-version = "1.60"

[build-dependencies.tauri-build]
version = "2.0.0-rc.12"
features = [ ]

[dependencies]
anyhow = "1.0"
libc = "0.2.158"
serde_json = "1.0"
signal-hook = "0.3.17"
window-vibrancy = "0.5.2"
convert_case = "0.6.0"
lazy_static = "1.5.0"
tauri-plugin-updater = "2.0.0-rc.3"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
log = "0.4"
time = "0.3.17"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-devtools = "2.0.0-rc"

  [dependencies.tauri-plugin-log]
  version = "2.0.0-rc"
  features = [ "colored" ]

  [dependencies.tauri]
  version = "2.0.0-rc.15"
  features = [ "protocol-asset", "macos-private-api" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.strum]
  version = "0.26.3"
  features = [ "derive" ]

  [dependencies.ts-rs]
  version = "9.0.1"

  [dependencies.ts-const-enums]
  path = "ts-const-enums"

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc"
